fixed font not showing correctly

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -15,14 +15,14 @@
     height: 100%;
   }
 
-h1 {
+.title {
     font-family: Galactica;
     text-align: center;
-    font-size: 75px;
+    font-size: 90px;
     color: grey;
 }
 
-h3 {
+.rest {
     color: grey;
     text-align: center;
     font-size: 40px;
